Bug 169871 - LibreOffice Writer displays incorrect colors in BMP images when an odt file was created with OpenOffice Writer.
Summary: LibreOffice Writer displays incorrect colors in BMP images when an odt file w...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
7.3.0.3 release
Hardware: All Windows (All)
: medium normal
Assignee: Andras Timar
URL:
Whiteboard: target:26.8.0 target:26.2.0.0.beta2 t...
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2025-12-07 11:09 UTC by Timo Kytölä
Modified: 2025-12-10 14:02 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
odt file (20.16 MB, application/vnd.oasis.opendocument.text)
2025-12-07 11:12 UTC, Timo Kytölä
Details
OpenOffice vs LibreOffice picture (6.99 MB, image/png)
2025-12-07 11:14 UTC, Timo Kytölä
Details
minimal reproducer (1x1 bmp that should be red but it's blue in LO) (142 bytes, image/bmp)
2025-12-07 19:08 UTC, Andras Timar
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Timo Kytölä 2025-12-07 11:09:18 UTC
Description:
LibreOffice Writer displays incorrect colors in images when an odt file was created with OpenOffice Writer.

When I open a file created with OpenOffice (Writer *.odt) with LibreOffice, some of the images are different colors, for example, a car is red in OpenOffice, but blue when opened with LibreOffice.

OpenOffice and MS Word display the colors correctly, only LibreOffice displays them incorrectly.

LibreOffice has the latest version 25.8.3 and I've tried it on three different computers, all with the latest software versions and drivers, still the same thing.


Actual Results:
LibreOffice Writer displays incorrect colors in images

Expected Results:
LibreOffice Writer displays correct colors in images


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Version: 25.8.3.2 (X86_64)
Build ID: 8ca8d55c161d602844f5428fa4b58097424e324e
CPU threads: 20; OS: Windows 11 X86_64 (build 26200); UI render: Skia/Vulkan; VCL: win
Locale: fi-FI (fi_FI); UI: fi-FI
Calc: CL threaded
Comment 1 Timo Kytölä 2025-12-07 11:12:35 UTC
Created attachment 204481 [details]
odt file
Comment 2 Timo Kytölä 2025-12-07 11:14:42 UTC
Created attachment 204482 [details]
OpenOffice vs LibreOffice picture
Comment 3 V Stuart Foote 2025-12-07 15:24:18 UTC
Confirmed, color shifts for all the BMP when opened in LO 25.8 swriter.  

Seems like nothing special about the BMP held in the archive's Pictures directory, Windows bitmap no alpha channel.  

Imagemagick identify gives this listing:

C:\Users\vsfoote\Downloads\tdf169871bmps>identify *.bmp
1000000000000118000000CC193DFB72.bmp BMP 280x204 280x204+0+0 8-bit sRGB 228618B 0.001u 0:00.000
1000000000000280000001736A7C7E23.bmp BMP 640x371 640x371+0+0 8-bit sRGB 949898B 0.001u 0:00.001
1000000000000320000002150B934B72.bmp BMP 800x533 800x533+0+0 8-bit sRGB 1.62672MiB 0.002u 0:00.002
100000000000033D0000018B19C77750.bmp BMP 829x395 829x395+0+0 8-bit sRGB 1.24927MiB 0.002u 0:00.001
10000000000003C000000270FA166E15.bmp BMP 960x624 960x624+0+0 8-bit sRGB 2.28529MiB 0.003u 0:00.003
1000000000000400000003005898016C.bmp BMP 1024x768 1024x768+0+0 8-bit sRGB 3.00013MiB 0.004u 0:00.004
10000000000006400000042A7757EE94.bmp BMP 1600x1066 1600x1066+0+0 8-bit sRGB 6.50648MiB 0.012u 0:00.011
10000000000006400000042AB6340810.bmp BMP 1600x1066 1600x1066+0+0 8-bit sRGB 6.50648MiB 0.012u 0:00.011
100000000000078000000438BD7E69DC.bmp BMP 1920x1080 1920x1080+0+0 8-bit sRGB 7.91029MiB 0.013u 0:00.012

C:\Users\vsfoote\Downloads\tdf169871bmps>identify *.jpg
1000000000000ECA000006D23FBF9F20.jpg JPEG 3786x1746 3786x1746+0+0 8-bit sRGB 4.4802MiB 0.014u 0:00.014

@Tomaž, Andras -- could you take a look?

=-testing-=
Version: 25.8.3.2 (X86_64)
Build ID: 8ca8d55c161d602844f5428fa4b58097424e324e
CPU threads: 28; OS: Windows 11 X86_64 (build 26200); UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded
Comment 4 V Stuart Foote 2025-12-07 15:33:04 UTC
The lone JPEG image gets correct color channel handling.
Comment 5 V Stuart Foote 2025-12-07 16:42:00 UTC
a little manual bibisecting from builds on hand:

OK
LibreOffice 3.3.0 OOO330m19 (Build:6) tag libreoffice-3.3.0.4
LibreOffice 3.4.6 OOO340m1 (Build:602)
Version 3.6.7.1 (Build ID: 9418c72)
Version 4.0.6.2 (Build ID: 2e2573268451a50806fcd60ae2d9fe01dd0ce24)
Version: 5.0.1.2 Build ID: 81898c9f5c0d43f3473ba111d7b351050be20261
Version: 5.3.1.2 (x64) Build ID: e80a0e0fd1875e1696614d24c32df0f95f03deb2
Version: 6.4.7.2 (x64) Build ID: 639b8ac485750d5696d7590a72ef1b496725cfb5
Version: 7.0.6.2 (x64) Build ID: 144abb84a525d8e30c9dbbefa69cbbf2d8d4ae3b
Version: 7.1.8.1 (x64) Build ID: e1f30c802c3269a1d052614453f260e49458c82c
Version: 7.2.7.2 (x64) Build ID: 8d71d29d553c0f7dcbfa38fbfda25ee34cce99a2


Bad
Version: 7.3.6.2 (x64) Build ID: c28ca90fd6e1a19e189fc16c05f8f8924961e12e
Version: 7.3.7.2 (x64) Build ID: e114eadc50a9ff8d8c8a0567d6da8f454beeb84f
Version: 7.6.6.3 (X86_64) Build ID: d97b2716a9a4a2ce1391dee1765565ea469b0ae7
Comment 6 V Stuart Foote 2025-12-07 16:50:08 UTC
first release with the BMP color issue was
Version: 7.3.0.3 (x64) Build ID: 0f246aa12d0eee4a0f7adcefbf7c878fc2238db3

so during workup for 7.3 in 2021.
Comment 7 Andras Timar 2025-12-07 18:18:26 UTC
If I revert https://gerrit.libreoffice.org/c/core/+/127920 this document is OK. Of course revert is not a solution, that patch fixed tdf#73523
Comment 8 Andras Timar 2025-12-07 19:08:03 UTC
Created attachment 204489 [details]
minimal reproducer (1x1 bmp that should be red but it's blue in LO)
Comment 9 Andras Timar 2025-12-07 21:17:49 UTC
https://gerrit.libreoffice.org/c/core/+/195209

The last car picture in the bug document is corrupted in current LO master. But that is a different bug.
Comment 10 Commit Notification 2025-12-08 12:31:43 UTC
Andras Timar committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/66e99dae35e8564c8325508f084f501dfff97213

tdf#169871 fix wrong application of color mask

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2025-12-09 03:19:09 UTC
Andras Timar committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/be0138fc86ff6d6295af1eb43e1e38746a5b6feb

tdf#169871 fix wrong application of color mask

It will be available in 26.2.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2025-12-09 12:53:09 UTC
Andras Timar committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/0428fbee5db4e8164df05d675cc68694ac340379

tdf#169871 fix wrong application of color mask

It will be available in 25.8.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Commit Notification 2025-12-10 14:02:21 UTC
Andras Timar committed a patch related to this issue.
It has been pushed to "libreoffice-25-8-4":

https://git.libreoffice.org/core/commit/ba5f8531ab8cd66ca6f4afe742694a24ac46753c

tdf#169871 fix wrong application of color mask

It will be available in 25.8.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.