tdf#169871 fix wrong application of color mask

nV5RedMask, nV5GreenMask and nV5BlueMask are valid only
when used with 16-bpp or 32-bpp bitmap and the bitmap is
not compressed.

Change-Id: Ic6ca1364a12f9bc11d789e317428cd9c3e144873
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/195210
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>